# Timer-Stacks

./: .gitignore  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: launch.json
TimerStacks.xcworkspace/: contents.xcworkspacedata
api/sync/: schema.mjs  settings.mjs  stacks.mjs  status.mjs
apps/desktop/: .env.production  README.md  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
apps/desktop/api/sync/: schema.mjs  settings.mjs  stacks.mjs  status.mjs
apps/desktop/public/: manifest.webmanifest
apps/desktop/server/: env.mjs  index.mjs  run-with-env.mjs  tursoSchema.mjs  tursoSync.mjs
apps/desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: cloudSync.ts  (+6 more)
apps/mobile/: README.md  app.json  package.json  tailwind.config.js  vitest.config.ts
apps/mobile/app/: _layout.tsx  builder.tsx  history.tsx  index.tsx  settings.tsx  templates.tsx  timer.tsx
apps/mobile/ios/: Podfile
apps/watch/: WATCHOS.md
apps/watch/TimerStacksWatchApp/: ActiveSessionView.swift  ContentView.swift  HapticsManager.swift  PreviewData.swift  TimerStacksWatchApp.swift  WatchConnectivityManager.swift  WatchSessionModel.swift
apps/watch/TimerStacksWatchApp.xcodeproj/: project.pbxproj
docs/: XCODE_DEPLOYMENT.md
supabase/migrations/: 20260429000000_initial_cloud_sync.sql
(+50 files in other folders)
