[package]
name = "timer-stacks"
version = "0.1.0"
description = "Timer Stacks — structured timer routines"
authors = ["Timer Stacks"]
edition = "2021"
build = "build.rs"

[lib]
name = "timer_stacks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
